# training-template

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.yaml  spectrogram.yaml  trainer.yaml
configs/cluster/: default.yaml
configs/data/: default.yaml
configs/model/: default.yaml  large.yaml
configs/optim/: adamw.yaml
configs/preprocess/: spectrogram.yaml
configs/training/: default.yaml  train_subject_trials.yaml
scripts/: braintreebank.sh  data.sh  env.sh  train.sh
src/: train.py
src/model/: mse_ar.py
src/utils/: dataset.py  logger.py
train/: __main__.py  datamodule.py  dataset.py  featurizer.py  model.py  pl_module.py  train.py
